--- a/InternshipManagementSystem/Client/package.json
+++ b/InternshipManagementSystem/Client/package.json
@@ -14,11 +14,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
+    "bootstrap": "^5.1.3",
     "chartist": "^0.11.4",
     "perfect-scrollbar": "^1.5.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-chartist": "^0.14.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
@@ -50,5 +53,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8181"
+  "proxy": "http://localhost:8181",
+  "devDependencies": {
+    "redux-form": "^8.3.7"
+  }
 }
