--- a/InternshipManagementSystem/Client/package.json
+++ b/InternshipManagementSystem/Client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.3",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.4",
@@ -55,6 +56,11 @@
   },
   "proxy": "http://localhost:8181",
   "devDependencies": {
-    "redux-form": "^8.3.7"
+    "formik": "^2.2.9",
+    "prop-types": "^15.7.2",
+    "react-hook-form": "^7.19.1",
+    "react-material-ui-form-validator": "^3.0.0",
+    "redux-form": "^8.3.7",
+    "yup": "^0.32.11"
   }
 }
