--- a/InternshipManagementSystem/Client/package.json
+++ b/InternshipManagementSystem/Client/package.json
@@ -56,7 +56,10 @@
   },
   "proxy": "http://localhost:8181",
   "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "formik": "^2.2.9",
+    "jest-enzyme": "^7.1.2",
     "prop-types": "^15.7.2",
     "react-hook-form": "^7.19.1",
     "react-material-ui-form-validator": "^3.0.0",
