--- a/InternshipManagementSystem/Client/package.json
+++ b/InternshipManagementSystem/Client/package.json
@@ -6,7 +6,6 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@mui/styled-engine-sc": "^5.0.3",
@@ -14,20 +13,19 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
-    "chartist": "^0.11.4",
-    "perfect-scrollbar": "^1.5.3",
+    "bcrypt": "^5.0.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "react": "^17.0.2",
-    "react-chartist": "^0.14.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-scroll": "^1.8.4",
-    "recharts": "^2.1.5",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3008 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -50,5 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8181"
+  "proxy": "http://localhost:8282"
 }
